--- a/static/style.css
+++ b/static/style.css
@@ -58,9 +58,12 @@ justify-content: center;
 }
 
 .input-image {
-    
+    max-width: 80%;
+    max-height: 300px;
     width: auto;
-    height: 80%;
+    height: auto;
     object-fit: contain;
-    margin:20px;
+    margin: 20px;
+    border-radius: 8px;
+    display: block;
 }
